# magic_movie

./: PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
data/: movie_metadata_cache.json
magicmovie/: __init__.py  app.py  data.py  features.py  fetch_movielens.py  models.py  recommender.py
tests/: test_magicmovie.py
web/: app.js  index.html  styles.css
