[project]
name = "magicmovie"
version = "0.1.0"
description = "Statistics-backed movie recommendations with interpretable uncertainty."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

